<resources>
    <string name="app_name">Food Fighter</string>
    <string name ="restaurantName1">학생식당 </string>
    <string name ="restaurantAddress1">성북구 </string>
    <string name ="Phone">02-760-1678 </string>
    <string name ="starting">11:00~22:00 </string>
    <string name="number">번호</string>
    <string name="name">이름</string>
    <string name="address">주소</string>
    <string name="todo">TODO</string>
    <string name="resistRS">맛집 등록</string>
    <string name="menuname">메뉴이름</string>
    <string name="price">가격</string>
    <string name="detail">설명</string>
    <string name="resistMENU">메뉴등록</string>
    <string name="no_location_detected">No Location Detected</string>
</resources>
