<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/MENU_Image"
            android:layout_width="300dp"
            android:layout_height="240dp"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/icon_camera" />

        <EditText
            android:id="@+id/MENUname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/menuname" />

        <EditText
            android:id="@+id/MENUprice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/price" />

        <EditText
            android:id="@+id/MENUcomment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/detail" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/Resist_MENU"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text = "@string/resistMENU"/>
    </LinearLayout>

</LinearLayout>


