<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/RS_Image"
            android:layout_width="300dp"
            android:layout_height="240dp"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/icon_camera" />

        <EditText
            android:id="@+id/RSname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name" />

        <EditText
            android:id="@+id/RSnum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:hint="@string/number" />

        <EditText
            android:id="@+id/RSadrress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/Resist_RS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text = "@string/resistRS"/>
    </LinearLayout>
    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rsdetail"></ListView>

</LinearLayout>


